# toss-trader

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
automation/: com.tosstrader.dca.plist
reports/: backtest_2026-06-28.md  backtest_results_2026-06-28.json  improvement_roadmap_2026-06-28.md  strategy_gate_2026-06-28.md  strategy_results_2026-06-28.json
scripts/: backtest_demo.py  backtest_real.py  backtest_strategies.py  dca_cron.sh  engine_demo.py  install_dca_automation.sh  run_dca.py  selftest.py  smoke_test.py
src/toss_trader/: __init__.py  backtest.py  broker.py  client.py  config.py  costs.py  engine.py  errors.py  journal.py  marketdata.py  metrics.py  models.py  ratelimit.py  risk.py
src/toss_trader/strategy/: __init__.py  base.py  buy_and_hold.py  dual_momentum.py  regime_filter.py  sma_cross.py
